--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "bootstrap-icons": "^1.13.1",
-    "vue": "^3.5.17"
+    "vue": "^3.5.17",
+    "vue-router": "^4.5.1"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.11",
