Fixed Prisma to MongoDB connection

--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "ts-node-dev index.ts",
+    "dev": "nodemon --exec ts-node index.ts --ignore 'node_modules/'",
     "build": "tsc",
     "start": "node index.js"
   },
@@ -15,6 +15,8 @@
   "type": "commonjs",
   "dependencies": {
     "@prisma/client": "^6.12.0",
+    "cors": "^2.8.5",
+    "dotenv": "^17.2.1",
     "express": "^5.1.0",
     "mongodb": "^6.18.0"
   },
@@ -23,6 +25,8 @@
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.14",
     "nodemon": "^3.1.10",
-    "prisma": "^6.12.0"
+    "prisma": "^6.12.0",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.9.2"
   }
 }
