--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
     "bootstrap-icons": "^1.13.1",
+    "fuse.js": "^7.1.0",
     "vue": "^3.5.17",
     "vue-router": "^4.5.1"
   },
