--- a/client/.vscode/launch.json
+++ b/client/.vscode/launch.json
@@ -2,21 +2,23 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "name": "Launch Chrome against localhost",
-      "type": "pwa-chrome",
+      "type": "chrome",
       "request": "launch",
+      "name": "vuejs: chrome",
       "url": "http://localhost:5173",
       "webRoot": "${workspaceFolder}/src",
       "breakOnLoad": true,
-      "sourceMaps": true,
-      "preLaunchTask": "npm: dev"
+      "sourceMapPathOverrides": {
+        "webpack:///src/*": "${webRoot}/*"
+      }
     },
     {
-      "name": "Attach to Chrome",
-      "type": "pwa-chrome",
-      "request": "attach",
-      "port": 9222,
-      "webRoot": "${workspaceFolder}/src"
+      "type": "firefox",
+      "request": "launch",
+      "name": "vuejs: firefox",
+      "url": "http://localhost:5173",
+      "webRoot": "${workspaceFolder}/src",
+      "pathMappings": [{ "url": "webpack:///src/", "path": "${webRoot}/" }]
     }
   ]
 }
