updated compiler settings

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,16 +1,24 @@
 {
   "compilerOptions": {
-    "target": "ES2020", 
+    "target": "ES2020",
     "module": "commonjs",
     "rootDir": ".",
+    "outDir": "./dist",
     "moduleResolution": "node",
     "types": ["node"],
     "resolveJsonModule": true,
-    "outDir": "./dist", 
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
     "strict": true,
-    "skipLibCheck": true 
+    "skipLibCheck": true
   },
-  "include": ["*.ts", "controllers/**/*.ts", "middleware/**/*.ts", "prisma/**/*.ts", "routes/**/*.ts", "services/**/*.ts", "utilities/**/*.ts"]
+  "include": [
+    "*.ts",
+    "controllers/**/*.ts",
+    "middleware/**/*.ts",
+    "prisma/**/*.ts",
+    "routes/**/*.ts",
+    "services/**/*.ts"
+  ],
+  "exclude": ["dist", "node_modules"]
 }
