added [node] types back in to see if it fixes deploy error

--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,6 +5,7 @@
     "rootDir": ".",
     "outDir": "./dist",
     "moduleResolution": "node",
+    "types": ["node"],
     "typeRoots": ["./node_modules/@types"],
     "resolveJsonModule": true,
     "esModuleInterop": true,
