--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,8 +5,8 @@
     "rootDir": ".",
     "outDir": "./dist",
     "moduleResolution": "node",
-    "types": ["node"],
     "typeRoots": ["./node_modules/@types"],
+    "types": ["node", "express"],
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
