--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -5,7 +5,8 @@
     "rootDir": ".",
     "outDir": "./dist",
     "moduleResolution": "node",
-    "typeRoots": ["./node_modules/@types"],
+    "types": ["node", "express"],
+    "typeRoots": ["node_modules/@types"],
     "resolveJsonModule": true,
     "esModuleInterop": true,
     "forceConsistentCasingInFileNames": true,
