--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,4 +1,7 @@
-{
+{"typeAcquisition": {
+  "enable": true,
+  "include": ["node", "express"]
+},
   "compilerOptions": {
     "target": "ES2020",
     "module": "commonjs",
