--- a/server/tsconfig.json
+++ b/server/tsconfig.json
@@ -1,6 +1,6 @@
 {"typeAcquisition": {
   "enable": true,
-  "include": ["node", "express"]
+  "include": ["node", "express", "jest"]
 },
   "compilerOptions": {
     "target": "ES2020",
@@ -8,7 +8,7 @@
     "rootDir": ".",
     "outDir": "./dist",
     "moduleResolution": "node",
-    "types": ["node", "express"],
+    "types": ["node", "express", "jest"],
     "typeRoots": ["node_modules/@types"],
     "resolveJsonModule": true,
     "esModuleInterop": true,
@@ -21,7 +21,10 @@
     "middleware/**/*.ts",
     "prisma/**/*.ts",
     "routes/**/*.ts",
-    "services/**/*.ts"
+    "services/**/*.ts",
+    "**/__tests__/**/*.ts",
+    "**/*.test.ts",
+    "**/*.spec.ts"
   ],
   "exclude": ["dist", "node_modules"]
 }
