--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@auth0/auth0-vue": "^2.4.0",
     "@tailwindcss/vite": "^4.1.11",
     "bootstrap-icons": "^1.13.1",
     "fuse.js": "^7.1.0",
